--- a/designer.htm
+++ b/designer.htm
@@ -1,16 +1,14 @@
 <!doctype html>
 <head>
 	<META http-equiv="Content-Type" content="text/html; charset=ISO-8859-5">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-<!-- Required meta tags -->
+
+	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
 	<script src="designer.js"></script>
 	<link rel="stylesheet" href="designer.css">
+	<script src="js/bootstrap.bundle.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,45 +22,22 @@
 		</div>
 		<div class="form-header">Parameters</div>
 		<div class="preview-header">Preview</div>
-		<div class="form">
-			<table class="form-table" role="presentation">
-				<tbody>
-					<tr>
-						<th scope="row">
-							<label for="width">W:</label>
-						</th>
-						<td>
-							<input type="number" id="width" name="width" value="12" step=".25" min="8" max="12.5">
-						</td>
-						<th scope="row">
-							<label for="length">L:</label>
-						</th>
-						<td>
-							<input type="number" id="length" name="length" value="16" step=".25" min="5" max="17">
-						</td>
-						<th scope="row">
-							<label for="thickness">T:</label>
-						</th>
-						<td>
-							<input type="number" id="thickness" name="thickness" value="1" step=".25" min=".75" max="1.5">
-						</td>
-					</tr>
-					<tr>
-						<th scope="row">
-							<label for="pattern">Pattern:</label>
-						</th>
-						<td>
-							<input type="text" id="pattern" name="pattern"></br>
-						</td>
-					</tr>
-					<tr>
-						<th scope="row">
-							<input type="submit" value="Submit">
-						</th>
-					</tr>
-				</tbody>
-			</table>	
+		<div class="row g-3">
+			<div class="col">
+				<input type="number" class="form-control" id="width" name="width" value="12" step=".25" min="8" max="12.5">
+			</div>
+			<div class="col">
+				<input class="form-control" type="number" id="length" name="length" value="16" step=".25" min="5" max="17" >
+			</div>
+			<div class="col">
+				<input class="form-control" type="number" id="thickness" name="thickness" value="1" step=".25" min=".75" max="1.5">
+			</div>
 		</div>
+
+		<input type="text" id="pattern" name="pattern"></br>
+		<input type="submit" value="Submit">
+
+		
 		<div class="preview">sdfsdf</div>
 		
 		
