Updated with code downloaded from Linked in

--- a/designer.htm
+++ b/designer.htm
@@ -1,48 +1,47 @@
 <!doctype html>
 <head>
-	<META http-equiv="Content-Type" content="text/html; charset=ISO-8859-5">
-
-	<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<script src="designer.js"></script>
-	<link rel="stylesheet" href="designer.css">
-	<script src="js/bootstrap.bundle.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	
+	<link rel="stylesheet" href="css/bootstrap.css">
+    
 </head>
 <body>
 	<div class="container">
-		<div class="header">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			 proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+		<!--<div class="row">
+			<div class="col-12">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+		</div>-->
+		<div class="row">
+			<div class="col-6">Parameters</div>
+			<div class="col-6">Preview</div>
 		</div>
-		<div class="form-header">Parameters</div>
-		<div class="preview-header">Preview</div>
-		<div class="row g-3">
-			<div class="col">
-				<input type="number" class="form-control" id="width" name="width" value="12" step=".25" min="8" max="12.5">
-			</div>
-			<div class="col">
-				<input class="form-control" type="number" id="length" name="length" value="16" step=".25" min="5" max="17" >
-			</div>
-			<div class="col">
-				<input class="form-control" type="number" id="thickness" name="thickness" value="1" step=".25" min=".75" max="1.5">
-			</div>
+		
+		
+		
+		<!-- <div class="row row-cols-3">
+			<div class="col"><label for="width">W:</label><input type="number" id="width" name="width" value="12" step=".25" min="8" max="12.5"></div>
+			<div class="col"><label for="length">L:</label><input type="number" id="length" name="length" value="16" step=".25" min="5" max="17"></div>
+			<div class="col"><label for="thickness">T:</label><input type="number" id="thickness" name="thickness" value="1" step=".25" min=".75" max="1.5"></div>
+			<div class="col" id="preview">sdfsdf</div>
 		</div>
-
-		<input type="text" id="pattern" name="pattern"></br>
-		<input type="submit" value="Submit">
-
+		<div class="row">
+			<div class="col-4"><label for="pattern">Pattern:</label><input type="text" id="pattern" name="pattern"></div>
+			<div class="col"><input type="submit" value="Submit"></div>  
+		</div>
+		-->
 		
-		<div class="preview">sdfsdf</div>
-		
-		
-		<div class="instructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
-
-	</div>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
+	</div><!-- end div class container -->
+	<script src="js/jquery.slim.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
