--- a/designer.htm
+++ b/designer.htm
@@ -14,7 +14,9 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
 	<link rel="stylesheet" href="designer.css">
-	<script src="js/designer.js"></script>
+	
+	<script type="module" src="js/BoardDesign.js"></script>
+	<script type="module" src="js/designer.js"></script>
 	
 </head>
 <body>
