Updated canvas size

--- a/designer.htm
+++ b/designer.htm
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.css">
 	<link rel="stylesheet" href="css/bootstrap-reboot.css">
-	<link rel="stylesheet" href="designer.css">
+	<link rel="stylesheet" href="css/designer.css">
 	
 	<script type="module" src="js/BoardDesign.js"></script>
 	<script type="module" src="js/designer.js"></script>
@@ -41,7 +41,7 @@
 						</div>
 						<div class="col-12">
 							<label for="pattern" class="form-label">Pattern:</label>
-							<input type="text" class="form-control" id="pattern" name="pattern" value="1W 1M 1W 1M 1W 1M 1W 1M 1W 1M 1W 1M">
+							<input type="text" class="form-control" id="pattern" name="pattern" value="1W 1MP 1W 1MP 1W 1MP 1W 1MP 1W 1MP 1W 1MP">
 						</div>
 					</div>
 				</form>
@@ -62,7 +62,7 @@
 				<div>Preview</div>
 				<span id="widthPreviewDisplay">12</span>in x <span id="lengthPreviewDisplay">16</span>in
 				<div id="preview" class="container">
-					<canvas id="previewCanvas" width="500" height="300">
+					<canvas id="previewCanvas" width="300" height="400">
 						Your browser does not support HTML5 Canvas.
 					</canvas>
 					
